# jupyter-pdm-demo

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  settings.py
.old/: some_detail.py
adapters/: repository.py
content/controls/: control.py
content/plots/: distribution.py  high_level.py  some_detail.py
content/sql_queries/: bicycle_hire.py  tv_radio_station.py
control/: control.py
entrypoints/: broadcast_tv_radio_station.ipynb
jupyter_demo/: __init__.py  utils.py
jupyter_demo/adapters/: repository.py
jupyter_demo/content/: plots.py
jupyter_demo/content/controls/: control.py
jupyter_demo/content/plots/: distribution.py  high_level.py
jupyter_demo/content/sql_queries/: bicycle_hire.py
jupyter_demo/content/structures/: plots.py  tables.py
jupyter_demo/domain/: model.py
jupyter_demo/entrypoints/: broadcast_tv_radio_station.ipynb  closure_and_validation.ipynb  what_is_a_dataframe.ipynb
jupyter_demo/options/: plot.py
notebooks/: broadcast_tv_radio_station.ipynb
notebooks/options/: interactive.py
options/: pandas.py  plot.py
sql_queries/: broadcast_tv_radio_station.py
tests/: test_jupyter_demo.py
